feat: add Play Integrity API and gamification system
- Integrated Google Play Integrity API with native Android implementation for app security verification
- Implemented comprehensive gamification system with achievements, level progression, and milestone tracking
- Added profile and data deletion endpoints with cascade cleanup across all user collections

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -48,6 +48,8 @@
   "noRunsYet": "No runs yet",
   "startFirstRun": "Start your first run!",
   
+  "adjustmentStep": "Adjustment step",
+  
   "settingsApp": "Application",
   "settingsTheme": "Theme",
   "settingsLanguage": "Language",
@@ -174,6 +176,7 @@
   
   "goal": "Goal",
   "goalWeekly": "Weekly goal",
+  "goalDescription": "Goal description",
   "goalProgress": "Progress",
   
   "about": "About",
